[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kryptorious-envguard"
version = "1.1.0"
description = "Environment variable management CLI — validate, generate, audit, and encrypt .env files."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Kryptorious Quantum Biosciences, Inc."}]
dependencies = ["click>=8.0", "rich>=13.0", "python-dotenv>=1.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
envguard = "envguard.cli:main"

[project.urls]
Homepage = "https://devflow.sh"

[tool.setuptools.packages.find]
where = ["src"]
